translateService works everywhere

--- a/src/app/@ansyn/assets/i18n/sns.json
+++ b/src/app/@ansyn/assets/i18n/sns.json
@@ -1,4 +1,7 @@
 {
   "Planet": "פלנטה",
-  "REScene": "שוגי"
+  "REScene": "שוגייייייייייייייייי",
+  "SSC2": "סהסהסי 2",
+  "Sentinel-2A": "סנטינל 2A"
+
 }
