--- a/src/app/@ansyn/assets/i18n/sns.json
+++ b/src/app/@ansyn/assets/i18n/sns.json
@@ -1,7 +1,3 @@
 {
-  "Planet": "פלנטה",
-  "REScene": "שוגייייייייייייייייי",
-  "SSC2": "סהסהסי 2",
-  "Sentinel-2A": "סנטינל 2A"
-
+  "Sentinel-2A": "Sentinel 2A"
 }
